--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
             <header>
                 <div class="container">
-                    <nav class="top-nav clearfix f-left">
+                    <nav class="nav-l clearfix f-left">
                         
                         <ul>
                             <li>
@@ -24,6 +24,20 @@
 
                             <li>
                                 <a href="#">Contact Us</a>
+                            </li>
+                        </ul>
+                    </nav>
+
+                    <nav class="nav-r clearfix f-right">
+                        <ul>
+                            <li>
+                                <button class="search-button">&#128269</button>
+                            </li>
+                            <li>
+                                <button class="login-button">Login</button>
+                            </li>
+                            <li>
+                                <button class="hubspot-button">GetHubspotFree</button>
                             </li>
                         </ul>
                     </nav>
