--- a/index.html
+++ b/index.html
@@ -43,12 +43,55 @@
                     </nav>
                 </div>
             </header>
+
+            <hr>
             
             <main>
+                <div class="container">
+                    <nav class="logo clearfix f-left">
+                        <img src="img/logo.svg" alt="hubspot-logo">
+                    </nav>
 
+                    <nav class="center-nav-left clearfix f-right">
+                        <ul>
+                        
+                            <li>
+                                <select name="" id="" class="selector">
+                                    <option value="">Software</option>
+                                </select>
+                            </li>
+
+                            <li>
+                                <select name="" id="" class="selector-no">
+                                    <option value="">Pricing</option>
+                                </select>
+                            </li>
+
+
+                            <li>
+                                <select name="" id="" class="selector">
+                                    <option value="">Resources</option>
+                                </select>
+                            </li>
+
+                            <li>
+                                <select name="" id="" class="selector">
+                                    <option value="">Partners</option>
+                                </select>
+                            </li>
+
+                            <li>
+                                <select name="" id="" class="selector">
+                                    <option value="">About</option>
+                                </select>
+                            </li>
+                        </ul>
+                    </nav>
+
+
+
+                </div>
             </main>
-
-
             <footer>
 
             </footer>
