inserimento sezione hero

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         </head>
 
         <body>
-
+            <!-- header + le 2 nav -->
             <header>
                 <div class="container">
                     <nav class="nav-l clearfix f-left">
@@ -47,7 +47,8 @@
             <hr>
             
             <main>
-                <div class="container">
+                <!-- inserimmento logo hubspot +nav -->
+                <div class="container hubspot">
                     <nav class="logo clearfix f-left">
                         <img src="img/logo.svg" alt="hubspot-logo">
                     </nav>
@@ -87,10 +88,18 @@
                             </li>
                         </ul>
                     </nav>
-
-
-
                 </div>
+
+                <!-- inserimento hero -->
+                <div class="hero">
+                    <div class="container">
+                        <h1>There's a better way to grow.</h1>
+                        <p>Marketing, sales, and service software that helps your business grow without compromise. Because "good for the business" should also mean "good for the customer"</p>
+                        <button class="hubspot-button-2">GetHubspotFree</button>
+                        <h5>Get started with FREE tools, and upgrade as you grow.</h5>
+                    </div>
+                </div>
+
             </main>
             <footer>
 
