--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
                     </div>
                 </div>
 
+                <div class="wait-zone"></div>
+                
+
             </main>
             <footer>
 
