--- a/index.html
+++ b/index.html
@@ -101,6 +101,17 @@
                 </div>
 
                 <div class="wait-zone"></div>
+
+                <!-- inserimento section powerful -->
+                <div class="light-background">
+                    <div class="container ">
+                        <img src="img/Integrations_Illustration@2x.webp" alt="cubo-img" class="cubo-img">
+                        <div class="text-align">
+                        <h2> Powerful Alone. Better Togheter</h2>
+                        <p>Hubspot offers a full stack of software for marketing sales, and customer service, with a completely free CRM at its core. They're powerful alone - but even better when used togheter.</p>
+                        </div>    
+                    </div>
+                </div>
                 
 
             </main>
