--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="style.css">
         <title>Hubspot</title>
         </head>
@@ -349,10 +350,14 @@
                                 <li><a href="#">Hubspot Templates</a></li>
                                 <li><a href="#">Free Tools & Generation</a></li>                            
                                 <li><button>Contact HubSpot Support</button></li>
+                            <div class="icone-social">
+                                <a href="#" class="fa fa-facebook"></a>
+                                <a href="#" class="fa fa-instagram"></a>
+                                <a href="#" class="fa fa-youtube"></a>
+                                <a href="#" class="fa fa-twitter"></a>
+                                <a href="#" class="fa fa-linkedin"></a>
+                            </div>
 
-                                <span>
-                                  social-loghi  F I Y T L
-                                </span>
                         </div>
 
                         <div class="languages">
@@ -361,13 +366,14 @@
                                </li>
                                <li class="lang-foot"><a href="#">Deutsch</a>
                                </li>
-                               <li class="lang-foot"><a href="#">Japanese</a>
+                               <li class="lang-foot"><a href="#">日本語</a>
                                </li>
-                               <li class="lang-foot"><a href="#">Espanol</a>
+                               <li class="lang-foot"><a href="#">Español</a>
                                </li>
-                               <li class="lang-foot"><a href="#">Portogues</a>
+                               <li class="lang-foot"><a href="#">Português</a>
                                </li>
-                               <li class="lang-foot"><a href="#">Francais</a>
+                               <li class="lang-foot"><a href="#">
+                                Français</a>
                                </li>    
                             </ul>
                         </div>
