sistemazione footer - completa l'esercizio.

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 
             <footer>
                 <div class="gray-background">
-                    <div class="container-footer">
+                    <div class="container-footer clearfix">
                         <div class="col-footer f-left">
                             <h4>Increase Your Traffic</h4>
                             <ul>
